--- a/downloads/cheatsheets/gen-server.tex
+++ b/downloads/cheatsheets/gen-server.tex
@@ -15,7 +15,7 @@
 \tikzset{normal border/.style={orange!30!black!10}}
 
 % Macro to draw the shape behind the text, when it fits
-% completly in the page
+% completely in the page
 \def\parchmentframe#1{
 \tikz{
   \node[inner sep=2em] (A) {#1};  % Draw the text of the node
